--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-  "editor.formatOnSave": false,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+  "jest.runMode": {
+    "type": "on-save",
+    "testFileOnly": true
+  },
+  "jest.enableInlineErrorMessages": true,
+  "jest.monitorLongRun": "on"
 }
